# finch-tensor

./: .gitignore  .pre-commit-config.yaml  Manifest.toml  README.md  juliapkg.json  pyproject.toml  pytest.ini  requirements.txt
.github/ci/: environment.yml
.github/workflows/: ci.yml  publish.yml
finch/: __init__.py  julia.py  tensor.py
finch/tests/: test_sparse.py
src/finch/: __init__.py  compiled.py  dtypes.py  errors.py  formats.py  io.py  julia.py  levels.py  tensor.py  typing.py  utils.py
tests/: conftest.py  test_indexing.py  test_io.py  test_ops.py  test_scipy_constructors.py  test_sparse.py
tests/data/: matrix_1.ttx
