[tool.poetry]
name = "finch-tensor"
version = "0.1.6"
description = ""
authors = ["Willow Ahrens <willow.marie.ahrens@gmail.com>"]
readme = "README.md"
packages = [{include = "finch", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
juliapkg = "^0.1.10"
juliacall = "^0.9.15"
numpy = "^1.19"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
sparse = "^0.15.1"
scipy = "^1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
